--- a/css/srh.css
+++ b/css/srh.css
@@ -79,7 +79,7 @@ html,body{
 .slide3,.slide4,.slide5{
     width: 100%;
     height: 100%;
-    background: url(../img/swiper/ccc1.png) no-repeat;
+    background: url(../img/swiper/ccc12.jpg) no-repeat;
     background-size:100% 100%;
 }
 .slide3 h5{
